Updates and link with Prismic

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,12 @@ html, body {
 .header {
   text-align: center;
   min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+
   display: flex;
+  gap: 24px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -24,7 +29,6 @@ a {
   .btn {
     border: none;
     border-radius: 16px;
-    color: var(--white);
     font-family: var(--font-text);
     font-weight: bold;
     font-size: var(--font-size);
@@ -38,17 +42,35 @@ a {
     align-items: center;
     padding: 8px 12px;
 
-    background-image: var(--bi-gradient-1);
-    background-position: center right;
-    background-size: 200% 100%;
     transition: var(--transi);
 
-    &:hover{
-      background-position: center left;
+    &.mainPink {
+      color: var(--white);
+      background-image: var(--bi-gradient-1);
+      background-position: center right;
+      background-size: 200% 100%;
+
+      &:hover{
+        background-position: center left;
+      }
     }
 
     > span {
       text-decoration: none !important;
     }
+  }
+}
+
+.home-background {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background-image: var(--bi-gradient-2);
+
+  img {
+    width: 115%;
+    height: 115%;
+    object-fit: cover;
+    opacity: 0.3;
   }
 }
