--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,6 +13,7 @@
     --white: #ffffff;
 
     --bi-gradient-1: linear-gradient(to right, var(--bi-dark-pink), var(--bi-light-pink), var(--bi-dark-pink));
+    --bi-gradient-2: linear-gradient(45deg, var(--bi-dark-pink), var(--bi-indigo));
 
     --transi: all 0.3s ease;
 
