--- a/src/components/HeroArticle.scss
+++ b/src/components/HeroArticle.scss
@@ -3,7 +3,7 @@
 
 .Hero {
     width: 414px;
-    height: 500px;
+    height: 600px;
     margin: 0 auto;
     position: relative;
 
@@ -12,7 +12,7 @@
 
     .FeaturedImage {
         width: 100%;
-        height: 500px;
+        height: 100%;
         position: absolute;
         top: 0;
         z-index: 1;
@@ -29,7 +29,7 @@
     .Content {
         position: relative;
         z-index: 2;
-        height: calc(100% - 64px);
+        height: calc(100% - 112px);
         display: flex;
         gap: 16px !important;
         flex-direction: column;
@@ -37,11 +37,11 @@
         justify-content: flex-end;
         color: white;
         text-align: left;
-        padding: 32px 24px;
+        padding: 32px 24px 72px 24px;
 
         .Tags {
             display: flex;
-            gap: 16px;
+            gap: 8px;
 
             > .Tag {
                 display: inline-block;
