--- a/src/components/LatestPosts.scss
+++ b/src/components/LatestPosts.scss
@@ -10,9 +10,20 @@
         position: relative;
         z-index: 2;
         top: -44px;
-        padding: 16px 24px;
+        padding: 24px 24px;
         background-color: var(--white);
         border-radius: 24px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        h2 {
+            margin: 0;
+        }
+
+        a .btn {
+            width: 100%;
+        }
 
         > a.OtherPost {
             cursor: pointer;
