--- a/src/components/HeroArticle.scss
+++ b/src/components/HeroArticle.scss
@@ -66,12 +66,21 @@
         > h1 {
             display: inline-block;
             width: fit-content;
-            padding: 0 12px;
             font-family: var(--font-title);
             color: var(--bi-dark-pink);
-            background-color: var(--white);
-            border-radius: 16px;
+            border-radius: 16px 0px 0px 16px;
+            overflow: hidden;
             margin: 0;
+
+            > span {
+                background-color: var(--white);
+                border-radius: 0px 16px 16px 0px;
+                overflow: hidden;
+                padding: 2px 12px;
+
+                box-decoration-break: clone;
+                -webkit-box-decoration-break: clone;
+            }
         }
     }
 }
