--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,34 @@ html, body {
   color: var(--dark-grey);
 }
 
+.global {
+  display: flex;
+  flex-direction: column;
+
+  .container {
+    width: 100%;
+    margin: auto;
+  }
+
+  .home-background {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-image: var(--bi-gradient-2);
+    position: absolute;
+    top: 0;
+  
+    img {
+      width: 115%;
+      height: 115%;
+      object-fit: cover;
+      opacity: 0.3;
+    }
+  }
+}
+
+
+/* ------ TITLES STYLES ------ */
 h2 {
   display: grid;
   grid-template-columns: max-content auto;
@@ -34,25 +62,7 @@ h2 {
   }
 }
 
-.header {
-  text-align: center;
-  min-height: 100vh;
-  width: 100%;
-  position: absolute;
-  z-index: 2;
-
-  display: flex;
-  gap: 24px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  .logo {
-    margin: 24px 0;
-  }
-
-}
-
+/* ------ BUTTONS STYLES ------ */
 a {
   text-decoration: none !important;
 
@@ -88,19 +98,5 @@ a {
     > span {
       text-decoration: none !important;
     }
-  }
-}
-
-.home-background {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  background-image: var(--bi-gradient-2);
-
-  img {
-    width: 115%;
-    height: 115%;
-    object-fit: cover;
-    opacity: 0.3;
   }
 }
